# playwright_automation

./: .gitignore  .pre-commit-config.yaml  conftest.py  pyproject.toml  pytest.ini  readme.md  secure.json  settings.py
helpers/: db.py  web_service.py
page_objects/: application.py  demo_pages.py  test_cases.py
tests/: test_dashboard.py  test_demo.py  test_location.py  test_mobile.py  test_testcases.py
