[tool.poetry]
name = "playwright-automation"
version = "0.1.0"
description = ""
authors = ["apalyukha <apalyukha@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
allure-pytest = "^2.13.5"
pytest-playwright = "^0.5.0"
playwright = "^1.44.0"
pytest = "^8.2.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
