[tool.poetry]
name = "playwright-automation"
version = "0.1.0"
description = ""
authors = ["apalyukha <apalyukha@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
allure-pytest = "^2.13.5"
pytest-playwright = "^0.5.1"
playwright = "^1.45.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
